Replacing 'OpenMoko' with 'Openmoko'

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -356,7 +356,7 @@ For more recent kernel versions (like the one shipped on the FreeRunner / GTA02)
 
 == Mailing list ==
 
-OpenMoko related kernel development discussions happen on the [http://lists.openmoko.org/mailman/listinfo/openmoko-kernel openmoko-kernel@lists.openmoko.org] mailing list.
+Openmoko related kernel development discussions happen on the [http://lists.openmoko.org/mailman/listinfo/openmoko-kernel openmoko-kernel@lists.openmoko.org] mailing list.
 
 {{Languages|Kernel}}
 
