Replacing 'OpenMoko' with 'Openmoko'

--- a/License.mw
+++ b/License.mw
@@ -18,11 +18,11 @@ The future license compatibility is guaranteed by using the FSF-default
 ==== Header ====
 
 The '''exact''' following header shall be present in all source code and header files
-of applications that were entirely and originally developed by the OpenMoko project:
+of applications that were entirely and originally developed by the Openmoko project:
 
 <pre>
 /*
- * Copyright (C) 2006-2007 by OpenMoko, Inc.
+ * Copyright (C) 2006-2007 by Openmoko, Inc.
  * Written by $Authors_Name <$Authors_email>
  * All Rights Reserved
  *
@@ -59,11 +59,11 @@ The future license compatibility is guaranteed by using the FSF-default
 ==== Header ====
 
 The '''exact''' following header shall be present in all source code and header files
-of libraries that were entirely and originally developed by the OpenMoko project:
+of libraries that were entirely and originally developed by the Openmoko project:
 
 <pre>
 /*
- * Copyright (C) 2006-2007 by OpenMoko, Inc.
+ * Copyright (C) 2006-2007 by Openmoko, Inc.
  * Written by $Authors_name <$Authors_email>
  * All Rights Reserved
  *
