--- a/License%2Far.mw
+++ b/License%2Far.mw
@@ -19,11 +19,11 @@ The future license compatibility is guaranteed by using the FSF-default
 ==== Header ====
 
 The '''exact''' following header shall be present in all source code and header files
-of applications that were entirely and originally developed by the OpenMoko project:
+of applications that were entirely and originally developed by the Openmoko project:
 
 <pre>
 /*
- * Copyright (C) 2006-2007 by OpenMoko, Inc.
+ * Copyright (C) 2006-2007 by Openmoko, Inc.
  * Written by $Authors_Name <$Authors_email>
  * All Rights Reserved
  *
@@ -63,7 +63,7 @@ The future license compatibility is guaranteed by using the FSF-default
 
 <pre>
 /*
- * Copyright (C) 2006-2007 by OpenMoko, Inc.
+ * Copyright (C) 2006-2007 by Openmoko, Inc.
  * Written by $Authors_name <$Authors_email>
  * All Rights Reserved
  *
@@ -90,7 +90,7 @@ If we extend/enhance or contribute back to existing Free Software programs,
 we have to (and will) comply with existing licenses.  This means that all
 our code will be 
 
-# copyright by OpenMoko
+# copyright by Openmoko
 # licensed under the exact same terms of the original program
 
 {{Languages|License}}
