--- a/License%2Fit.mw
+++ b/License%2Fit.mw
@@ -1,5 +1,5 @@
 {{Introbox/it}}
-Il progetto OpenMoko utilizza le seguenti Licenze per i suoi programmi ufficiali:
+Il progetto Openmoko utilizza le seguenti Licenze per i suoi programmi ufficiali:
 
 == Software Nativo ==
 
@@ -15,11 +15,11 @@ La compatibilità con le future licenze è garantita dall'utilizzo della frase d
 
 ==== Header ====
 
-Il '''preciso''' header seguente dovrà essere presente in tutti i file sorgenti ed in tutti i file header dei programmi che sono stati sviluppati interamente ed originalmente dal progetto OpenMoko:
+Il '''preciso''' header seguente dovrà essere presente in tutti i file sorgenti ed in tutti i file header dei programmi che sono stati sviluppati interamente ed originalmente dal progetto Openmoko:
 
 <pre>
 /*
- * Copyright (C) 2006-2007 by OpenMoko, Inc.
+ * Copyright (C) 2006-2007 by Openmoko, Inc.
  * Written by $Authors_Name <$Authors_email>
  * All Rights Reserved
  *
@@ -52,11 +52,11 @@ La compatibilità con le future licenze è garantita dall'utilizzo della frase d
 
 ==== Header ====
 
-Il '''preciso''' header seguente dovrà essere presente in tutti i file sorgenti ed in tutti i file header delle librerie che sono state sviluppate interamente ed originalmente dal progetto OpenMoko:
+Il '''preciso''' header seguente dovrà essere presente in tutti i file sorgenti ed in tutti i file header delle librerie che sono state sviluppate interamente ed originalmente dal progetto Openmoko:
 
 <pre>
 /*
- * Copyright (C) 2006-2007 by OpenMoko, Inc.
+ * Copyright (C) 2006-2007 by Openmoko, Inc.
  * Written by $Authors_name <$Authors_email>
  * All Rights Reserved
  *
@@ -82,13 +82,13 @@ Il '''preciso''' header seguente dovrà essere presente in tutti i file sorgenti
 Nel caso in cui estendessimo/migliorassimo o contribuissimo ad esistenti programmi Free Software,
 siamo tenuti ad aderire (ed aderiremo) alle licenze esistenti.  Questo significa che tutto il nostro codice sarà 
 
-# copyright by OpenMoko
+# copyright by Openmoko
 # licenziato con le stesse esatte parole del programma originale
 
 
 == Licenza per il Marchio di fabbrica ==
 
-Occorre tenere presente che attualmente la FIC ("FIRST INTERNATIONAL COMPUTER, INC. CORPORATION") è il legale proprietario del marchio OpenMoko (USPTO #77013374 standard character mark). Una somma per l'utilizzo della licenza sul Marchio di Fabbrica potrebbe essere richiesta dalla FIC se si utilizza la parola OpenMoko.
+Occorre tenere presente che attualmente la FIC ("FIRST INTERNATIONAL COMPUTER, INC. CORPORATION") è il legale proprietario del marchio Openmoko (USPTO #77013374 standard character mark). Una somma per l'utilizzo della licenza sul Marchio di Fabbrica potrebbe essere richiesta dalla FIC se si utilizza la parola Openmoko.
 
 
 {{Languages|License}}
