Replacing 'OpenMoko' with 'Openmoko'

--- a/Mac_OS_X.mw
+++ b/Mac_OS_X.mw
@@ -7,7 +7,7 @@ To operate the Phase 1 devices (Neo 1973), you need to flash a root file system 
 
 == Graphical Flashing with Openmoko Flasher ==
 Here is a detailed instruction:
-# download Version 1.4 or later of Openmoko Flasher from http://www.dsitri.de/wiki.php?page=OpenMoko%20Flasher
+# download Version 1.4 or later of Openmoko Flasher from http://www.dsitri.de/wiki.php?page=Openmoko%20Flasher
 # select the repository
 # press the Refresh button (which loads the list of packages on the server)
 # select and load the rootfs (takes some minutes for approx. 40 MByte)
@@ -319,7 +319,7 @@ There are some efforts to get through process of compiling OE and Openmoko under
 
 == GNUstep/mySTEP SDK ==
 
-There is a [[QuantumSTEP]]/mySTEP project to port GNUstep to the Openmoko/Neo: [[http://www.quantum-step.com/wiki.php?page=OpenMoko-Edition More Info]]
+There is a [[QuantumSTEP]]/mySTEP project to port GNUstep to the Openmoko/Neo: [[http://www.quantum-step.com/wiki.php?page=Openmoko-Edition More Info]]
 An SDK for Xcode/Interface Builder is also available: [[http://www.versiontracker.com/dyn/moreinfo/macosx/20581 Entry at Version Tracker]] [[http://www.quantum-step.com/wiki.php?page=SDK More Info]]
 
 == Tools for Developers ==
@@ -327,7 +327,7 @@ An SDK for Xcode/Interface Builder is also available: [[http://www.versiontracke
 Some tools that run on MacOS X
 
 === mkfs.jffs2 ===
-[[http://www.quantum-step.com/download/OpenMoko-Edition/mkfs.jffs2.tgz mkfs.jffs2]] - make JFFS2 (root) file system (Universal Binary). Package includes sources and Xcode 2.4 project file to rebuild on MacOS X 10.4.11. NOT TESTED DEEPLY.
+[[http://www.quantum-step.com/download/Openmoko-Edition/mkfs.jffs2.tgz mkfs.jffs2]] - make JFFS2 (root) file system (Universal Binary). Package includes sources and Xcode 2.4 project file to rebuild on MacOS X 10.4.11. NOT TESTED DEEPLY.
 
   mkfs.jffs2 --pad=0x700000 -o rootfs.jffs2 -e 0x4000 -n -d/tmp/jffsroot/
 
