--- a/Main_Page%2Ffa.mw
+++ b/Main_Page%2Ffa.mw
@@ -80,7 +80,7 @@ Openmoko نسل دوم Noe را در ۲۶ جون ۲۰۰۸ به نام Neo FreeRu
 *[[ASU Feature Plan]]
 *[[CommunityRepository|Share your project]]
 *[[GroupSales]]
-*[[WhyOpenMoko|Why OpenMoko is best: A Comparative Look]]
+*[[WhyOpenmoko|Why Openmoko is best: A Comparative Look]]
 ==<font color=white>Snapshot</font>==
 *<font color=white>You can always download the latest build here.</font>
 ** <font color=white>For FreeRunner </font>[http://buildhost.openmoko.org/daily/freerunner/ http://buildhost.openmoko.org/daily/freerunner/]
