Replacing 'OpenMoko' with 'Openmoko'

--- a/Main_Page%2Fit.mw
+++ b/Main_Page%2Fit.mw
@@ -35,7 +35,7 @@ Openmoko ha iniziato la vendita del Neo FreeRunner (GTA02), la seconda versione 
 * [[Toolchain|utilizzare la toolchain]]
 * <font color=white>VMware</font>
 * [[Python|introduzione a python]]
-* [[Openmoko under QEMU|OpenMoko sotto Qemu]] 
+* [[Openmoko under QEMU|Openmoko sotto Qemu]] 
 
 ===<font color=white>Integrazione di Sistema e personalizzazione di una distribuzione</font>===
 * [[OpenEmbedded|OE-The distribution building framework]]
@@ -66,7 +66,7 @@ Openmoko ha iniziato la vendita del Neo FreeRunner (GTA02), la seconda versione 
 
 
 ==<font color=75d806>La community Openmoko</font>==
-Chiunque può unirsi al progetto OpenMoko e contribuire a disegnare prodotti open. Unisciti a noi e collabora ad un [[Development resources/it | progetto]], incluso il Wiki di Openmoko. Leggi la [[Help:Contents | wiki editing help]]page per ottenere informazioni su come contribuire a questo wiki. 
+Chiunque può unirsi al progetto Openmoko e contribuire a disegnare prodotti open. Unisciti a noi e collabora ad un [[Development resources/it | progetto]], incluso il Wiki di Openmoko. Leggi la [[Help:Contents | wiki editing help]]page per ottenere informazioni su come contribuire a questo wiki. 
 
 Puoi partire dalla pagina di [[introduction/it|introduzione]], dalle foto, dai video o dalla Openmoko Wiki Official Index Page. Come al solito possono essere d'aiuto le [[FAQ/it | Frequently Asked Questions]] (FAQ) e le [http://lists.openmoko.org/mailman/listinfo/| mailing list]. 
 
@@ -93,7 +93,7 @@ Si noti che il set raccomandato non è sempre l'ultimo disponibile, ma il più s
 *<font color=white>Per un panorama generale del Wiki Openmoko, si vedano le [[Openmoko Wiki Official Index Page]].</font>
 ==<font color=white>Eventi</font>==
 *[[Summer of Code 2008]]
-*[[OpenMoko Education/zh tw]]
+*[[Openmoko Education/zh tw]]
 *[[Events:FOSDEM 2008]]
 *[[OpenLab]]
 
