Replacing 'OpenMoko' with 'Openmoko'

--- a/Main_Page%2Fru.mw
+++ b/Main_Page%2Fru.mw
@@ -58,7 +58,7 @@ __NOEDITSECTION__
 <font color=white> ※</font> [[:Category: Test |  Узнать больше о Тестировании]]
 
 ===<font color=white>Эмуляция</font>===
-*[[Getting Openmoko working on host with Xephyr|Эмуляция OpenMoko на ПК с использованием Xephyr]]
+*[[Getting Openmoko working on host with Xephyr|Эмуляция Openmoko на ПК с использованием Xephyr]]
 *[[Test_Openmoko Emulation with chroot image|Эмуляция Openmoko с готовым образом корневой фс]]
 ===<font color=white>Публикация вашего проекта===
 *[[CommunityRepository|Опубликовать Ваш Проект]]
@@ -80,7 +80,7 @@ __NOEDITSECTION__
 *[[ASU Feature Plan|План реализации АОП(Апрельское обновление ПО)]]
 *[[CommunityRepository|Публикация вашего проекта]]
 *[[GroupSales|Групповые продажи]]
-*[[WhyOpenMoko|Почему OpenMoko лучше: Сравнительный Взгляд]]
+*[[WhyOpenmoko|Почему Openmoko лучше: Сравнительный Взгляд]]
 ==<font color=white>Ежедневные Сборки</font>==
 *<font color=white>Здесь вы всегда можете загрузить последнюю сборку.</font>
 ** <font color=white>Для FreeRunner </font>[http://buildhost.openmoko.org/daily/freerunner/ http://buildhost.openmoko.org/daily/freerunner/]
