Replacing 'OpenMoko' with 'Openmoko'

--- a/Manually_using_Bluetooth.mw
+++ b/Manually_using_Bluetooth.mw
@@ -32,7 +32,7 @@ The devices should show as UP. If not you can use
 
 == Bluetooth Functions ==
 
-===Configuring Bluetooth on OpenMoko 2007.2 (August 27 snapshot with kernel 2.6.21.6-moko11) ===
+===Configuring Bluetooth on Openmoko 2007.2 (August 27 snapshot with kernel 2.6.21.6-moko11) ===
 
 In file /etc/bluetooth/hcid.conf you should change the passkey from BlueZ to something numeric. For testing you may use "0000". Also, you can set the name to "Neo (%d)".
 
@@ -48,7 +48,7 @@ There should be a passkey agent built into openmoko, but for now you can start u
 
  passkey-agent --default 0000 &
 
-Note: the passkey-agent is not required in OpenMoko 2007.2 with kernel 2.6.21.6 as of at least since August 27 (maybe earlier).
+Note: the passkey-agent is not required in Openmoko 2007.2 with kernel 2.6.21.6 as of at least since August 27 (maybe earlier).
 
 === HID (Human Input Device) ===
 
