--- a/Minimo.mw
+++ b/Minimo.mw
@@ -125,7 +125,7 @@ sudo aptitude install libidl-dev
 
 === In chroot'ed environment ===
 
-Following instructions in [[Getting Openmoko working on host with Xephyr]] to get yourself chroot'ed into OpenMoko environment. 
+Following instructions in [[Getting Openmoko working on host with Xephyr]] to get yourself chroot'ed into Openmoko environment. 
 
 Start Xephyr. You don't need to start Openmoko session, minimo can run as is. 
 
