Replacing 'OpenMoko' with 'Openmoko'

--- a/Minimo%2Fes.mw
+++ b/Minimo%2Fes.mw
@@ -70,7 +70,7 @@ sudo aptitude install libidl-dev
 
 == En entorno usando chroot ==
 
-Sigue las instrucciones en [[Getting OpenMoko working on host with Xephyr]](en inglés) para simular el uso de chroot en el entorno de Openmoko.
+Sigue las instrucciones en [[Getting Openmoko working on host with Xephyr]](en inglés) para simular el uso de chroot en el entorno de Openmoko.
 
 Inicia Xephyr. No necesitas iniciar sesión en Openmoko, Minimo puede ejecutarse tal cual.
 
