Replacing 'OpenMoko' with 'Openmoko'

--- a/Minimo%2Fit.mw
+++ b/Minimo%2Fit.mw
@@ -1,14 +1,14 @@
 = Installazione del web browser Minimo =
 
-[http://www.mozilla.org/projects/minimo/develop.html Minimo] è un web browser basato su Mozilla. Ha un supporto integrale al AJAX e possiede altri vantaggi. Attualmente OpenMoko non include Minimo. Qui sono riportate le istruzioni per far funzionare Minimo con Xephyr e come usare altri software di terze parti. 
+[http://www.mozilla.org/projects/minimo/develop.html Minimo] è un web browser basato su Mozilla. Ha un supporto integrale al AJAX e possiede altri vantaggi. Attualmente Openmoko non include Minimo. Qui sono riportate le istruzioni per far funzionare Minimo con Xephyr e come usare altri software di terze parti. 
 
 * [http://bec-systems.com/web/content/view/59/9/ Istruzioni per includere nuovi software OpenEmbedded al tuo progetto]
 
 == Setup build environment ==
 
-Se hai compilato il tuo OpenMoko usando MokoMakefile alcuni di questi steps potrebbero esserti poco familiari.
+Se hai compilato il tuo Openmoko usando MokoMakefile alcuni di questi steps potrebbero esserti poco familiari.
 
-Assumiamo che la tua directory root di OpenMoko sia ~/workspace/moko
+Assumiamo che la tua directory root di Openmoko sia ~/workspace/moko
 
 Prima devi definire le variabili d'ambiente:
 <pre>
@@ -44,7 +44,7 @@ make openmoko-devel-image
 </pre>
 
 
-La distribuzione di default OpenMoko manca del file ''/etc/resolv.conf'' che è usato per configurare i DNS. Senza questo file, la non risoluzione degli indirizzi impedisce la navigazione web. La via più facile per sistemare questo problema è quella di copiare il file dalla macchina host all'immagine.
+La distribuzione di default Openmoko manca del file ''/etc/resolv.conf'' che è usato per configurare i DNS. Senza questo file, la non risoluzione degli indirizzi impedisce la navigazione web. La via più facile per sistemare questo problema è quella di copiare il file dalla macchina host all'immagine.
 
 <pre>
 moo@hacker:~/workspace/moko$ cp /etc/resolv.conf rootfs/etc/resolv.conf
@@ -52,9 +52,9 @@ moo@hacker:~/workspace/moko$ cp /etc/resolv.conf rootfs/etc/resolv.conf
 
 == In chroot'ed environment ==
 
-Segui le istruzioni in [[Getting OpenMoko working on host with Xephyr/it|Far funzionare OpenMoko su un host con Xephyr]] per entrare nell'ambiente OpenMoko. 
+Segui le istruzioni in [[Getting Openmoko working on host with Xephyr/it|Far funzionare Openmoko su un host con Xephyr]] per entrare nell'ambiente Openmoko. 
 
-Fai partire Xephyr. Non hai bisogno di iniziare una sessione OpenMoko, minimo può funzionare così com'è. 
+Fai partire Xephyr. Non hai bisogno di iniziare una sessione Openmoko, minimo può funzionare così com'è. 
 
 <pre>
 / $ minimo  
