Replacing 'OpenMoko' with 'Openmoko'

--- a/Minimo%2Fzh_cn.mw
+++ b/Minimo%2Fzh_cn.mw
@@ -73,7 +73,7 @@ sudo aptitude install libidl-dev
 
 == 在chroot'ed 环境下 ==
 
-在[[Getting OpenMoko working on host with Xephyr]] 的操作指引为你的Openmoko环境取得chroot'ed。启动Xephyr。你不需要启动Openmoko session，minimo 则可以像是启动了Openmoko session般执行。 
+在[[Getting Openmoko working on host with Xephyr]] 的操作指引为你的Openmoko环境取得chroot'ed。启动Xephyr。你不需要启动Openmoko session，minimo 则可以像是启动了Openmoko session般执行。 
 
 <pre>
 / $ minimo  
