--- a/Minimo%2Fzh_tw.mw
+++ b/Minimo%2Fzh_tw.mw
@@ -73,7 +73,7 @@ sudo aptitude install libidl-dev
 
 == 在chroot'ed 環境下 ==
 
-在[[Getting OpenMoko working on host with Xephyr]] 的操作指引為你的Openmoko環境取得chroot'ed。啟動Xephyr。你不需要啟動Openmoko session，minimo 則可以像是啟動了Openmoko session般執行。 
+在[[Getting Openmoko working on host with Xephyr]] 的操作指引為你的Openmoko環境取得chroot'ed。啟動Xephyr。你不需要啟動Openmoko session，minimo 則可以像是啟動了Openmoko session般執行。 
 
 <pre>
 / $ minimo  
