Replacing 'OpenMoko' with 'Openmoko'

--- a/Modular_phone.mw
+++ b/Modular_phone.mw
@@ -1,4 +1,4 @@
-A number of manufacturers produce modular components designed for embedded systems. Some of these components are suitable for a hobbyist to put together a modular phone. This page is intended as a starting-point for building an OpenMoko compatible phone.
+A number of manufacturers produce modular components designed for embedded systems. Some of these components are suitable for a hobbyist to put together a modular phone. This page is intended as a starting-point for building an Openmoko compatible phone.
 
 The major problem with this approach is that the resultant phone tends to be larger than a normal phone.
 
@@ -41,7 +41,7 @@ This is because though they may be designed to be compact, internal connectors a
 
 |}
 
-Prices will be reduced, if we as the OpenMoko community buy in bulk.
+Prices will be reduced, if we as the Openmoko community buy in bulk.
 
 Capabilities wise, this compares well with the Neo - there is no accelerated graphics and the screen resolution is smaller, but it does have EDGE and a faster processor. Otherwise specs are similar.
 
