Replacing 'OpenMoko' with 'Openmoko'

--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -355,7 +355,7 @@ Now run
   cd ..
   make update openmoko-devel-image
 
-And if everything's alright you should now have an OpenMoko image to flash to your phone or run in qemu as described above.
+And if everything's alright you should now have an Openmoko image to flash to your phone or run in qemu as described above.
 
 === Hello World application ===
 
