--- a/MokoMakefile%2Fit.mw
+++ b/MokoMakefile%2Fit.mw
@@ -1,29 +1,29 @@
 ==MokoMakefile==
 
-MokoMakefile è un metodo completamente automatizzato per la configurazione dell'ambiente di sviluppo OpenMoko, uno strumento inestimabile che aiuta i nuovi sviluppatori ad ottenere un ambiente con le stesse configurazioni di quelli  già presenti. Permette di ottenere la stessa ripetibilità nella compilazione e manutenzione dell'ambiente che [[OpenEmbedded]] introduce nell'attuale software embedded.
+MokoMakefile è un metodo completamente automatizzato per la configurazione dell'ambiente di sviluppo Openmoko, uno strumento inestimabile che aiuta i nuovi sviluppatori ad ottenere un ambiente con le stesse configurazioni di quelli  già presenti. Permette di ottenere la stessa ripetibilità nella compilazione e manutenzione dell'ambiente che [[OpenEmbedded]] introduce nell'attuale software embedded.
 
-Nota che MokoMakefile *non* sostituisce bitbake, svn, monotone, openembedded, qmake e null'altro. Costituisce un wrapper attorno ad essi che facilita la configurazione e la manutenzione di un ambiente di sviluppo che rispecchia le istruzioni pubblicate da OpenMoko. MokoMakefile necessita circa 7 GB di spazio disponibile.
+Nota che MokoMakefile *non* sostituisce bitbake, svn, monotone, openembedded, qmake e null'altro. Costituisce un wrapper attorno ad essi che facilita la configurazione e la manutenzione di un ambiente di sviluppo che rispecchia le istruzioni pubblicate da Openmoko. MokoMakefile necessita circa 7 GB di spazio disponibile.
 
-MokoMakefile è sviluppato da [[User:RodWhitby|Rod Whitby]] - non è un prodotto ufficiale OpenMoko (anche se sarebbe una buona cosa sfruttarlo per uso interno). Se ci sono delle discrepanze tra le [[Building_OpenMoko_from_scratch/it|istruzioni ufficiali compilazione OpenMoko]] e le operazioni di MokoMakefile, vanno considerate corrette le istruzioni ufficiali.
+MokoMakefile è sviluppato da [[User:RodWhitby|Rod Whitby]] - non è un prodotto ufficiale Openmoko (anche se sarebbe una buona cosa sfruttarlo per uso interno). Se ci sono delle discrepanze tra le [[Building_Openmoko_from_scratch/it|istruzioni ufficiali compilazione Openmoko]] e le operazioni di MokoMakefile, vanno considerate corrette le istruzioni ufficiali.
 
 Il MokoMakeFIle è capace di costruire le immagini sia di  OM-2007.1 sia di OM-2007.2. Il core team ha scelto il default, ma è possibile scegliere l'uno o l'altro in cima al MakeFile.
 
-MokoMakeFile costruisce anche l'emulatore del Neo1973 basato su Qemu, come parte del suo processo, ed ha come obiettivi l'installazione delle immagini di OpenMoko e la loro esecuzione. Questi comandi possono essere anche usati senza scaricare e costruire la stessa distribuzione OpenEmbedded OpenMoko. Questa parte è descritta in [[Using_QEMU_with_MokoMakefile/it|Usare QEMU con MokoMakeFile]].
-= Requisiti per costruire OpenMoko =
-Indipendentemente da qualsiasi MokoMakeFile o da qualsiasi processo manuale per mettere a punto l'ambiente OpenMoko, ci sono molti prerequisiti che dovrebbero essere soddisfatti prima di cominciare la costruzione:
-* RAM: la macchina che ospiterà la costruzione (build host) dovrebbe avere almeno 512 Mb di RAM, ed uno stesso ammontare di swap. Alcuni pacchetti costruiti da OpenMoko, come busybox sono costruiti compilando tutti i files sorgente in un solo file binario, e questo causa la crescita del processo di gcc fino a 300 Mb, e nessuna parte della memoria occupata dovrebbe essere in swap perchè il tutto finisca in tempi ragionevoli. Per quanto riguarda busybox, può essere disattivata, ma ciò significherebbe che busybox non sarà ottimizzata per gcc.
-* Spazio su disco: occorrono almeno 12 Gb di spazio disponibile su disco perchè la costruzione di OpenMoko vada a buon fine (vedere sotto un consiglio per ridurre la quantità di spazio richiesto).
+MokoMakeFile costruisce anche l'emulatore del Neo1973 basato su Qemu, come parte del suo processo, ed ha come obiettivi l'installazione delle immagini di Openmoko e la loro esecuzione. Questi comandi possono essere anche usati senza scaricare e costruire la stessa distribuzione OpenEmbedded Openmoko. Questa parte è descritta in [[Using_QEMU_with_MokoMakefile/it|Usare QEMU con MokoMakeFile]].
+= Requisiti per costruire Openmoko =
+Indipendentemente da qualsiasi MokoMakeFile o da qualsiasi processo manuale per mettere a punto l'ambiente Openmoko, ci sono molti prerequisiti che dovrebbero essere soddisfatti prima di cominciare la costruzione:
+* RAM: la macchina che ospiterà la costruzione (build host) dovrebbe avere almeno 512 Mb di RAM, ed uno stesso ammontare di swap. Alcuni pacchetti costruiti da Openmoko, come busybox sono costruiti compilando tutti i files sorgente in un solo file binario, e questo causa la crescita del processo di gcc fino a 300 Mb, e nessuna parte della memoria occupata dovrebbe essere in swap perchè il tutto finisca in tempi ragionevoli. Per quanto riguarda busybox, può essere disattivata, ma ciò significherebbe che busybox non sarà ottimizzata per gcc.
+* Spazio su disco: occorrono almeno 12 Gb di spazio disponibile su disco perchè la costruzione di Openmoko vada a buon fine (vedere sotto un consiglio per ridurre la quantità di spazio richiesto).
 * Tempo: la costruzione iniziale richiede almeno 5 ore (su un Core2Duo 2 GHz senza ottimizzazione per il multiprocessore) ed può richiedere alcuni giorni per le macchine lente.
 
 == Software richiesto ==
 Il sistema di controllo della versione utilizzato da OpenEmbedded è [http://monotone.ca/ monotone], e non è scaricato ed installato dal MokoMakeFile. Se la tua distribuzione non è provvista di tale programma, è possibile scaricarlo ed installarlo come binario statico da [http://monotone.ca].
 
-Alcune distribuzioni che preparano il sistema alla compilazione per OpenEmbedded sono elencate a questo indirizzo [http://www.openembedded.org/wiki/OEandYourDistro], ma potrebbero essere non aggiornate, incomplete e non coprire tutto ciò di cui OpenMoko ha bisogno per essere costruito.
+Alcune distribuzioni che preparano il sistema alla compilazione per OpenEmbedded sono elencate a questo indirizzo [http://www.openembedded.org/wiki/OEandYourDistro], ma potrebbero essere non aggiornate, incomplete e non coprire tutto ciò di cui Openmoko ha bisogno per essere costruito.
 
-Una buona guida è la [[Building OpenMoko from scratch/it#Build host prerequisites|sezione sui prerequisiti della macchina]] per la costruzione di OpenMoko in [[Building OpenMoko from scratch/it|Costruire OpenMoko da zero]].
+Una buona guida è la [[Building Openmoko from scratch/it#Build host prerequisites|sezione sui prerequisiti della macchina]] per la costruzione di Openmoko in [[Building Openmoko from scratch/it|Costruire Openmoko da zero]].
 
 Se si dimentica qualcosa di cui OE ha bisogno per la sua costruzione, OE la richiederà velocemente durante la costruzione stessa, ma non controlla le dipendenze, motivo per cui si dovrà o installare le dipendenze prima di cominciare il build, oppure installarle dopo il fallimento del build.
-OpenMoko continuerà il build dal punto in cui si era interrotto, quando il build verrà ripreso dopo l'installazione delle dipendenze mancanti.
+Openmoko continuerà il build dal punto in cui si era interrotto, quando il build verrà ripreso dopo l'installazione delle dipendenze mancanti.
 
 === Prima di iniziare ===
 '''Controlla che /bin/sh (ls -l /bin/sh) sia linkato a bash.''' L'utilizzo di dash potrebbe causare problemi, soprattutto per le installazioni standard di Ubuntu 7.04 (almeno quando installato da Live CD). Se /bin/sh punta a /bin/dash, correggilo (da root):
@@ -55,7 +55,7 @@ MokoMakefile ha delle patch che potrebbero essere compilate correttamente anche 
 Prima di avviare una lunga compilazione, controllare nella sezione Tips come utilizzare make sui multicore. Potreste dover modificare il file build/conf/local.conf a seconda dell'ambiente destinatario (emulazione/chroot):
    make openmoko-devel-image
 
-Questo creerà l'albero di directory descritto in [[Building OpenMoko from scratch/it|Creare OpenMoko da zero]], scaricherà tutto il software richiesto (dai siti giusti e le versioni aggiornate) e avvierà la compilazione dell'immagine.
+Questo creerà l'albero di directory descritto in [[Building Openmoko from scratch/it|Creare Openmoko da zero]], scaricherà tutto il software richiesto (dai siti giusti e le versioni aggiornate) e avvierà la compilazione dell'immagine.
 
 Una volta fatto, potrete scegliere se continuare ad usare MokoMakefile per le compilazioni successive, oppure utilizzare manualmente bitbake all'interno della directory di compilazione. La scelta è vostra.
 
@@ -65,7 +65,7 @@ I seguenti comandi sono utili per la manutenzione dell'ambiente di compilazione.
 1 - Per aggiornare MokoMakefile all'utlima versione:
    make update-makefile 
 
-2 - Per aggiornare la lista dei repository OpenMoko e le patch di MokoMakefile all'ultima versione:
+2 - Per aggiornare la lista dei repository Openmoko e le patch di MokoMakefile all'ultima versione:
    make update
 
 3 - Per assicurarsi che le ultime modifiche alla struttura delle directory siano applicate:
@@ -123,7 +123,7 @@ Cambia i valori PARALLEL_MAKE e BB_NUMBER_THREADS a seconda del numero di CPU de
 *Per gli host amd64 è necessaria la patch http://bugs.openembedded.org/show_bug.cgi?id=1765 per la compilazione db3-nativa.
 
 ===QEMU===
-MokoMakefile automatizza la compilazione, il flashing e l'esecuzione del nuovo [[OpenMoko under QEMU/it|emulatore Neo1973 emulator]] (basato su QEMU).
+MokoMakefile automatizza la compilazione, il flashing e l'esecuzione del nuovo [[Openmoko under QEMU/it|emulatore Neo1973 emulator]] (basato su QEMU).
 
 Dipendenze: 
  
@@ -131,13 +131,13 @@ Dipendenze:
 *netpbm ('apt-get install netpbm' in Ubuntu 7.04)
 *sdl-devel ('apt-get install libsdl1.2-dev in Ubuntu .704')
 
-Il comando “make qemu” compila qemu-neo1973, scarica le ultima immagini ufficiali OpenMoko, esegue il flash delle immagini sulla memoria virtuale ed esegue l'emulatore (c'è ancora bisogno di installare il makefile come descritto precedentemente).
+Il comando “make qemu” compila qemu-neo1973, scarica le ultima immagini ufficiali Openmoko, esegue il flash delle immagini sulla memoria virtuale ed esegue l'emulatore (c'è ancora bisogno di installare il makefile come descritto precedentemente).
 
 Altri target sono “make download-images” (per scaricare le ultime immagini ufficiali), “make flash-qemu-official” (flash delle immagini) e “make flash-qemu-local” (flash dell'ultima immagine compilata in locale), che possono essere seguite da “make run-qemu” o “make run-qemu-snapshot” per eseguire l'emulatore.
 
 Assicurarsi di avere “lynx” e “netpbm” installati nel sistema su cui si compila.
 
-Potrebbe essere utile leggere altro sul funzionamento di [[OpenMoko under QEMU/it|OpenMoko sotto QEMU]] nella pagina dedicata.
+Potrebbe essere utile leggere altro sul funzionamento di [[Openmoko under QEMU/it|Openmoko sotto QEMU]] nella pagina dedicata.
 
 ===Developing with MokoMakefile===
 
@@ -157,7 +157,7 @@ Per compilare le modifiche e utilizzare il risultato con qemu:
   make flash-qemu-local
   make run-qemu
 
-Se le modifiche vengono apportate alle applicazioni e non a OpenMoko, questo è quello che va fatto (esempio: openmoko-messages):
+Se le modifiche vengono apportate alle applicazioni e non a Openmoko, questo è quello che va fatto (esempio: openmoko-messages):
 
   /usr/src/openmoko# . ./setup-env
   /usr/src/openmoko# cd openmoko/
@@ -172,8 +172,8 @@ Se le modifiche vengono apportate alle applicazioni e non a OpenMoko, questo è 
 
 Poi continuare con MokoMakefile.
 
-Se vuoi aggiungere una applicazione alla tua distribuzione OpenMoko:
-Tutte le modifiche ai files dovrebbero essere fatte utilizzando quilt, come descritto sopra. In questo modo una modifica può essere facilmente inviata a OpenMoko project.
+Se vuoi aggiungere una applicazione alla tua distribuzione Openmoko:
+Tutte le modifiche ai files dovrebbero essere fatte utilizzando quilt, come descritto sopra. In questo modo una modifica può essere facilmente inviata a Openmoko project.
 Prima di tutto, creare una directory che corrisponderà al package e modificare un file '''.bb''':
   /usr/src/openmoko# cd openmoko/
   /usr/src/openmoko/openmoko# quilt new mycoolpackage.patch
@@ -206,7 +206,7 @@ Eeguire
   /usr/src/openmoko/openmoko# cd ..
   /usr/src/openmoko# make update all
 
-Se tutto è andato a buon fine, dovremmo avere una immagine OpenMoko pronta per il flash o l'emulazione tramite qemu.
+Se tutto è andato a buon fine, dovremmo avere una immagine Openmoko pronta per il flash o l'emulazione tramite qemu.
 
 ===Testimonials=== 
 MokoMakefile è raccomandato da 4 su 4 nuovi dei svilupparoti su #openmoko, con testimonianze come "For some reason last night I couldn't get my manual install of everything to work (bb complained about my bbpath I think) ... but with your makefile, it works great!", e "MokoMakefile rocks!".
