Replacing 'OpenMoko' with 'Openmoko'

--- a/Mokostat.mw
+++ b/Mokostat.mw
@@ -8,7 +8,7 @@ From [http://lists.openmoko.org/pipermail/openmoko-apps/2007-September/000156.ht
 
 <blockquote>
 [...] This application is aimed at displaying various system information of the 
-OpenMoko platform. [...]
+Openmoko platform. [...]
 </blockquote>
 
 == Source code ==
