Replacing 'OpenMoko' with 'Openmoko'

--- a/Navit.mw
+++ b/Navit.mw
@@ -58,12 +58,12 @@ http://downloads.cloudmade.com/ also has up-to-date maps from OpenStreetMap by c
 ** Start gpsd ( gpsd /tmp/nmeaNP )
 ** Start navit
 
-* The version of osm2navit with which you build the maps should match the version of navit you have. If in doubt, build the maps on the OpenMoko.
+* The version of osm2navit with which you build the maps should match the version of navit you have. If in doubt, build the maps on the Openmoko.
 
 == News ==
 
 === Street names ===
-They are now displayed on OpenMoko using the CVS version of Navit (20071217).
+They are now displayed on Openmoko using the CVS version of Navit (20071217).
 
 === Point selection by pen ===
 Easier using the CVS version (20071217). 
