--- a/Neo_1973%2Fnl.mw
+++ b/Neo_1973%2Fnl.mw
@@ -1,5 +1,5 @@
 [[Image:FIC-neo1973 small.jpg|120px|right]]
-De [[Neo1973 Hardware | Neo1973]] is de eerste telefoon die speciaal ontworpen is om [[OpenMoko]] te draaien.
+De [[Neo1973 Hardware | Neo1973]] is de eerste telefoon die speciaal ontworpen is om [[Openmoko]] te draaien.
 De telefoon, die geproduceerd wordt door [[FIC]], kan gebruikt worden in combinatie met elke [[GSM]] provider. 
 
 Uw Neo1973 net binnen? Kijk op de pagina: [[Getting_Started_with_your_Neo1973/nl | aan de slag]].
@@ -7,7 +7,7 @@ Uw Neo1973 net binnen? Kijk op de pagina: [[Getting_Started_with_your_Neo1973/nl
 
 [[Neo1973 Hardware | Neo1973 Hardware]] en [[Disassembling Neo1973]] bevatten informatie over de hardware.
 
-Zie [[OpenMoko]], [[OpenmokoFramework]], [[MokoMakefile]] en [[Development resources]] voor meer informatie over de (vrije) broncode.
+Zie [[Openmoko]], [[OpenmokoFramework]], [[MokoMakefile]] en [[Development resources]] voor meer informatie over de (vrije) broncode.
 
 Zie [[FAQ]] voor overige veel gestelde vragen (Frequently Asked Questions).
 
@@ -69,12 +69,12 @@ See [[Neo1973 GTA02 Hardware]] for the components in the GTA02v4 revision of the
 * GTA02v3 design finalized - DONE
 * GTA02v3 power supply flaw found, GTA02v4 needed - DONE
 * GTA02v4 design finalized - DONE
-* GTA02v4 small number produced for OpenMoko internal developer evaluation - DONE
-* GTA02v4 thorough evaluation by OpenMoko internal developers - DONE?
+* GTA02v4 small number produced for Openmoko internal developer evaluation - DONE
+* GTA02v4 thorough evaluation by Openmoko internal developers - DONE?
 * GTA02v4 flaw found, GTA02v5 needed - DONE?
 * GTA02v5 design finalized - DONE?
-* GTA02v5 small number produced for OpenMoko internal developer evaluation
-* GTA02v5 thorough evaluation by OpenMoko internal developers
+* GTA02v5 small number produced for Openmoko internal developer evaluation
+* GTA02v5 thorough evaluation by Openmoko internal developers
 * GTA02v5 produced in moderate volume
 * GTA02v5 goes on sale to community via web store
 
