--- a/Neo_1973%2Fpl.mw
+++ b/Neo_1973%2Fpl.mw
@@ -1,12 +1,12 @@
 [[Image:FIC-neo1973 small.jpg|120px|right]]
-[[:Category:Neo1973 Hardware | Neo1973]] jest pierwszym telefonem zaprojektowanym do obsługi systemu operacyjnego [[OpenMoko]].
-Jest zaprojektowany, by mógł być używany przez każdego operatora [[GSM]]; produkowany przez firmę [[FIC]], która wspiera projekt [[OpenMoko]].
+[[:Category:Neo1973 Hardware | Neo1973]] jest pierwszym telefonem zaprojektowanym do obsługi systemu operacyjnego [[Openmoko]].
+Jest zaprojektowany, by mógł być używany przez każdego operatora [[GSM]]; produkowany przez firmę [[FIC]], która wspiera projekt [[Openmoko]].
 
 Jeśli właśnie otrzymałeś swojego Neo1973 tu znajdziesz porady [[Getting_Started_with_your_Neo1973 | jak zacząć]].
 
 Zobacz [[:Category:Neo1973 Hardware | Neo1973 Hardware]] i [[Disassembling Neo1973 | Rozmontowywanie Neo1973]] by dowiedzieć się więcej o samym sprzęcie.
 
-Sprawdź [[OpenMoko]], [[OpenmokoFramework]], [[MokoMakefile]] i [[Development resources]] by dowiedzieć się więcej o kodzie źródłowym systemu.
+Sprawdź [[Openmoko]], [[OpenmokoFramework]], [[MokoMakefile]] i [[Development resources]] by dowiedzieć się więcej o kodzie źródłowym systemu.
 
 Zobacz także [[FAQ | Najczęściej Zadawane pytania]].
 
