Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo_1973%2Fro.mw
+++ b/Neo_1973%2Fro.mw
@@ -1,16 +1,16 @@
-Modelul Neo1973 este primul telefon proiectat să ruleze [[OpenMoko]]. Este un telefon care functioneaza cu orice retea GSM, şi este produs de [[FIC]] (First International Computer), iniţiatorii proiectului [[OpenMoko]].
+Modelul Neo1973 este primul telefon proiectat să ruleze [[Openmoko]]. Este un telefon care functioneaza cu orice retea GSM, şi este produs de [[FIC]] (First International Computer), iniţiatorii proiectului [[Openmoko]].
 
 Daca tocmai ai primit telefonul tau Neo1973 aici [[Getting_Started_with_your_Neo1973 | getting started]] sunt cateva sugestii referitoare la cum să începi să-l foloseşti.
 
 [[Image:FIC-neo1973 small.jpg|120px|right]]
-The [[Neo1973 Hardware | Neo1973]] is the first phone designed to run [[OpenMoko]].
-It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the [[OpenMoko]] project.
+The [[Neo1973 Hardware | Neo1973]] is the first phone designed to run [[Openmoko]].
+It is a phone that can be used with any [[GSM]] operator, and it is manufactured by [[FIC]] who instigated the [[Openmoko]] project.
 
 If you just received a Neo1973 here are some suggestions for [[Getting_Started_with_your_Neo1973 | getting started]].
 
 [[Neo1973 Hardware | Neo1973 Hardware]] and [[Disassembling Neo1973]] have more information on the hardware.
 
-See [[OpenMoko]], [[OpenmokoFramework]], [[MokoMakefile]] and [[Development resources]] for more information about source code.
+See [[Openmoko]], [[OpenmokoFramework]], [[MokoMakefile]] and [[Development resources]] for more information about source code.
 
 See [[FAQ]] for other Frequently Asked Questions.
 
@@ -72,12 +72,12 @@ See [[Neo1973 GTA02 Hardware]] for the components in the GTA02v4 revision of the
 * GTA02v3 design finalized - DONE
 * GTA02v3 power supply flaw found, GTA02v4 needed - DONE
 * GTA02v4 design finalized - DONE
-* GTA02v4 small number produced for OpenMoko internal developer evaluation - DONE
-* GTA02v4 thorough evaluation by OpenMoko internal developers - In  progress.
+* GTA02v4 small number produced for Openmoko internal developer evaluation - DONE
+* GTA02v4 thorough evaluation by Openmoko internal developers - In  progress.
 * GTA02v4 flaw found, GTA02v5 needed - On hold while further development on drivers is done to ensure no further hardware bugs. - In  progress.
 * GTA02v5 design finalized - DONE
-* GTA02v5 small number produced for OpenMoko internal developer evaluation - Done (around 20)
-* GTA02v5 thorough evaluation by OpenMoko internal developers - In  progress.
+* GTA02v5 small number produced for Openmoko internal developer evaluation - Done (around 20)
+* GTA02v5 thorough evaluation by Openmoko internal developers - In  progress.
 * GTA02v5 produced in moderate volume
 * GTA02v5 goes on sale to community via web store
 
