Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo1973_Debug_Board_v2%2FEEPROM.mw
+++ b/Neo1973_Debug_Board_v2%2FEEPROM.mw
@@ -55,7 +55,7 @@ Device Descriptor:
   idVendor           0x1457 
   idProduct          0x5118 
   bcdDevice            5.00
-  iManufacturer           1 OpenMoko
+  iManufacturer           1 Openmoko
   iProduct                2 Debug Board for Neo1973
   iSerial                 0 
   bNumConfigurations      1
