Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo1973_Hardware%2Fde.mw
+++ b/Neo1973_Hardware%2Fde.mw
@@ -162,7 +162,7 @@ Das [[Neo1973]] bietet zwei Taster an:
 This is the most simple, non-bluetooth version of the prototype.
 
 ==== GTA01v3 ====
-First generation of prototypes that was given to internal OpenMoko software developers.
+First generation of prototypes that was given to internal Openmoko software developers.
 
 Unfortunately not useful at all due to non-working touchscreen.
 
