/* Inserire la scheda Micro-SD, la SIM e la Batteria */

--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -57,7 +57,7 @@ Grazie per aver comprato questa versione da Sviluppatori del Neo Freerunner. Il 
 # Ora dovreste essere in grado di riconoscere il sistema che blocca la scheda SIM e la memoria Micro-SD, al margine con lo scomparto per la batteria.
 # Sbloccare il fissa scheda SIM facendo scivolare con l'unghia la parte metallica in giù, in direzione dell'entrata USB. Prestare attenzione poichè queste parti sono delicate e potrebbero essere danneggiate forzandole nella direzione sbagliata.
 # Sollevare il fissa scheda SIM.
-# La memoria Micro-SD è tenuta ferma da due fermagli su ambo i lati. E' più facile aprire il ferma Micro-SD sbloccando i fermagli uno alla volta, anzichè tirandola dal mezzo poichè tende ad aumentare la pressione sui fermagli laterali. Un cacciavite o un piccolo coltello possono aiutare in questa operazione.
+# La memoria Micro-SD è tenuta ferma da due fermagli su ambo i lati. È più facile aprire l'alloggiamento per la Micro-SD sbloccando i fermagli uno alla volta, anziché tirandolo dal mezzo, poiché tende ad aumentare la pressione sui fermagli laterali. Un cacciavite o un piccolo coltello possono aiutare in questa operazione.
 # Inserire la memoria Micro-SD dentro all'apposito spazio. Nota che i contatti elettrici devono rivolgersi verso il basso e vicino al bordo del Neo Freerunner.
 # Chiudere il fissa scheda Micro-SD, assicurandosi che entrambi i fermagli siano ben agganciati.
 # Inserire la scheda SIM dentro il fissa scheda SIM, facendo attenzione a farla scivolare dentro le due linguette metalliche. Nota che i contatti metallici devono essere rivolti verso il basso e l'angolo tagliato deve essere in direzione della presa dell'antenna GPS esterna.
@@ -65,7 +65,7 @@ Grazie per aver comprato questa versione da Sviluppatori del Neo Freerunner. Il 
 # Inserire la batteria nel compartimento per la batteria, allineando i contatti elettrici della batteria con quelli del comparto. Inserire prima il lato con i contatti elettrici.
 # Rimettere la cover posteriore del Neo Freerunner.
 
-[[Image:FR_SIM_SD_open.jpg|457px|thumb|SIM and SD holders open, with cards in place|center]]
+[[Image:FR_SIM_SD_open.jpg|457px|thumb|Alloggiamenti della SIM e della SD aperti, con le rispettive schede in sede|center]]
 
 === Ricaricare il Neo Freerunner===
 Quando si usa il Neo Freerunner per la prima volta, bisogna caricare la batteria completamente. La batteria può essere caricata con il caricatore fornito (a 1000mA) o con una porta USB che abbia la capicità di fornire 500mA di corrente. La maggiorparte dei computer sarà in grado di caricare il Neo Freerunner senza problemi.
