--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -67,8 +67,8 @@ Grazie per aver comprato questa versione da Sviluppatori del Neo Freerunner. Il 
 
 [[Image:FR_SIM_SD_open.jpg|457px|thumb|Alloggiamenti della SIM e della SD aperti, con le rispettive schede in sede|center]]
 
-=== Ricaricare il Neo Freerunner===
-Quando si usa il Neo Freerunner per la prima volta, bisogna caricare la batteria completamente. La batteria può essere caricata con il caricatore fornito (a 1000mA) o con una porta USB che abbia la capicità di fornire 500mA di corrente. La maggiorparte dei computer sarà in grado di caricare il Neo Freerunner senza problemi.
+=== Ricaricare il Neo Freerunner ===
+Quando si usa il Neo Freerunner per la prima volta, bisogna caricare la batteria completamente. La batteria può essere caricata con il caricatore fornito (a 1000mA) o con una porta USB che abbia la capacità di fornire 500mA di corrente. La maggior parte dei computer sarà in grado di caricare il Neo Freerunner senza problemi.
 
 Caricando a 100mA ci vorranno 6-12 ore, invece a 500mA ci vorrà 1-2 ore. ([http://openmoko.togaware.com/survivor/Charging.html openmoko.togaware.com])
 
