--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -9,7 +9,7 @@
 * Sliding your finger left is backspace.
 * Sliding your finger right is space.
 * Sliding your finger up/down changes between lowercase/uppercase/numbers/special characters.
-* Hovering over a letter for more than 2 seconds activates zoom mode, allowing you to type specific letters without prediction. 
+* Hovering over a letter for more than 2 seconds activates zoom mode, allowing you to type specific letters (including those already typed) without prediction.
 
 === Writing something ===
 
