--- a/Openmoko_Wiki_Editing_Guidelines.mw
+++ b/Openmoko_Wiki_Editing_Guidelines.mw
@@ -78,9 +78,9 @@ Please see available [[Templates]] and add them where necessary.
 *E
 
 *F
-** FreeRunner 
-***(not freerunner or Freerunner)
-***(the model name of the 2nd Openmoko phone)
+** Freerunner 
+***(not freerunner or FreeRunner)
+***(the model name of the 2nd Openmoko phone, technically GTA02)
 *G
 
 *H
@@ -102,7 +102,7 @@ Please see available [[Templates]] and add them where necessary.
 ** Neo 1973
 *** (the brand and model name of the first Openmoko phone)
 *** (not neo1973 or neo 1973.   Note this has changed during the course of the project and a lot of current entries in the Wiki and software are wrong.   See [http://lists.openmoko.org/pipermail/community/2008-February/013136.html here] for the official pronouncement as of February 2008)
-** Neo FreeRunner 
+** Neo Freerunner 
 *** (the brand and model name of the second Openmoko phone)
 *** (not NeoFreeRunner or neo freerunner)
 
