--- a/Toolchain.mw
+++ b/Toolchain.mw
@@ -5,13 +5,10 @@
 
 A toolchain is a set of tools that allows you to compile code. For Openmoko, we have to differentiate between the following use-cases:
 
-== Developing a single application ==
-
-For this, you should use a prebuilt toolchain from the Openmoko project. Here you can find a recipe to get started with this toolchain leading you through a series of steps to compile a project and run it on your target device. You might have heard about [[OpenEmbedded]], however as an application programmer, you should '''not''' be using [[OpenEmbedded]].
-
-== System Integration and customizing a distribution ==
-
-For this task, you should use [[OpenEmbedded]] which builds its own cross compiler during the bootstrapping/build process. System Integration and customizing a distribution is out of scope of this page.
+;(a) Developing a single application
+:For this, you should use a prebuilt toolchain from the Openmoko project. Here you can find a recipe to get started with this toolchain leading you through a series of steps to compile a project and run it on your target device. You might have heard about ''OpenEmbedded'', however as an application programmer, you should '''not''' be using OpenEmbedded.
+;(b) System Integration and customizing a distribution
+:For this task, you should use [[OpenEmbedded]] which builds its own cross compiler during the bootstrapping/build process. System Integration and customizing a distribution is out of scope of this page.
 
 =Basic toolchain usage=
 
