Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo1973_Hardware%2Fes.mw
+++ b/Neo1973_Hardware%2Fes.mw
@@ -1,4 +1,4 @@
-[[OpenMoko]] Es un conjuto de aplicaciones (programas) que se encuentran en un nivel superior sobre una determinada plataforma (sin importar cual sea).El [[:Category:Neo1973 Hardware | sistema físico (Hardware)del Neo1973 ]] es la primera plataforma que toma la ventaja de usar la distribución [[OpenMoko| OpenMoko ]]. Puede encontar las epecificaciones del [[:Category:Neo1973 Hardware | Neo1973]] leyendos estas páginas de introducción y las páginas especifícas para el [[:Category:Neo1973 Hardware | Neo1973 ]] descritas en la parte de abajo.
+[[Openmoko]] Es un conjuto de aplicaciones (programas) que se encuentran en un nivel superior sobre una determinada plataforma (sin importar cual sea).El [[:Category:Neo1973 Hardware | sistema físico (Hardware)del Neo1973 ]] es la primera plataforma que toma la ventaja de usar la distribución [[Openmoko| Openmoko ]]. Puede encontar las epecificaciones del [[:Category:Neo1973 Hardware | Neo1973]] leyendos estas páginas de introducción y las páginas especifícas para el [[:Category:Neo1973 Hardware | Neo1973 ]] descritas en la parte de abajo.
 
 [[Image:Gta01b v3 top.jpg|thumb|400px|Pantalla (parte frontal)]]
 [[Image:Gta01b v3 bottom.jpg|thumb|400px|Componentes (parte trasera)]]
@@ -162,7 +162,7 @@ El Neo1973 posee dos botones:
 El primer prototipo, el más simple y sin «bluetooth».
 
 ==== GTA01v3 ====
-First generation of prototypes that was given to internal OpenMoko software developers.
+First generation of prototypes that was given to internal Openmoko software developers.
 
 Unfortunately not useful at all due to non-working touchscreen.
 
