--- a/Neo1973_Hardware%2Fru.mw
+++ b/Neo1973_Hardware%2Fru.mw
@@ -1,4 +1,4 @@
-[[OpenMoko]] это набор программного обеспечения для [[hardware|платформы]] Neo1973, являющейся первой платформой, доказывающей, в свою очередь, преимущество OpenMoko. Вы можете узнать о специфике [[:Category:Neo1973 Hardware | Neo1973 Hardware]] ниже, а также на других страницах категорий, упомянутых ниже.
+[[Openmoko]] это набор программного обеспечения для [[hardware|платформы]] Neo1973, являющейся первой платформой, доказывающей, в свою очередь, преимущество Openmoko. Вы можете узнать о специфике [[:Category:Neo1973 Hardware | Neo1973 Hardware]] ниже, а также на других страницах категорий, упомянутых ниже.
 
 [[Image:Gta01b v3 top.jpg|thumb|400px|сторона с экраном (верхняя)]]
 [[Image:Gta01b v3 bottom.jpg|thumb|400px|сторона с деталями (нижняя)]]
@@ -167,7 +167,7 @@ Neo1973 имеет две клавиши:
 Это самая простая версия прототипа, не имеет bluetooth.
 
 ==== GTA01v3 ====
-Первое поколение прототипов, предоставленных внутренним разработчикам OpenMoko software.
+Первое поколение прототипов, предоставленных внутренним разработчикам Openmoko software.
 
 К сожалению совершенно нефункциональное из-за не функционирующего тачскрина.
 
