Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo1973_Hardware%2Fzh_cn.mw
+++ b/Neo1973_Hardware%2Fzh_cn.mw
@@ -160,7 +160,7 @@ Neo1973有两个按钮:
 这是最简单的没有蓝牙功能的一个原型版本。
 
 ==== GTA01v3 ====
-第一代的原型版本在OpenMoko软件的内部开发人员手里。
+第一代的原型版本在Openmoko软件的内部开发人员手里。
 
 但不幸的是，因为触摸屏不能工作，所以一点用都没有。
 
