Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo1973_compatible_cellphone_providers.mw
+++ b/Neo1973_compatible_cellphone_providers.mw
@@ -12,7 +12,7 @@ Here is some information on Prepaid GSM cards:
 * [http://www.prepaidgsm.net/ PrePaidGSM - worldwide overview about GSM prepaid offers]
 Think twice before choosing a tariff with long duration contracts (more than 12 months), because prices for the GPRS data tariffs are ''likely'' to lower in many countries. Also, long duration contracts are mostly combined with hardware (ie: free or steeply discounted phone with a 24 or 36 month contract). It will be worth your while to shop around for competing offers from the different providers in your area.
 
-We chose the GSM network format for the Neo1973 because GSM is in use by more countries than any other mobile phone standard. As a result, you will have better coverage with the Neo1973, and we felt that it was the best choice for our OpenMoko devices. When the Neo1973 is successful, and we believe that it will be, we will be developing new devices that we will be bringing to market. They will be running OpenMoko and supporting additional mobile phone network standards as well. So if GSM is not available in your area (ie: some areas in the USA), OpenMoko will be bringing other options to market in the future.
+We chose the GSM network format for the Neo1973 because GSM is in use by more countries than any other mobile phone standard. As a result, you will have better coverage with the Neo1973, and we felt that it was the best choice for our Openmoko devices. When the Neo1973 is successful, and we believe that it will be, we will be developing new devices that we will be bringing to market. They will be running Openmoko and supporting additional mobile phone network standards as well. So if GSM is not available in your area (ie: some areas in the USA), Openmoko will be bringing other options to market in the future.
 
 Below is a list of Neo1973-compatible providers around the world. In some countries there is also [http://www.three.com/ three] using UMTS but should support roaming. Please help by filling this out ''alphabetically'':
 
