Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo1973_compatible_cellphone_providers%2Fit.mw
+++ b/Neo1973_compatible_cellphone_providers%2Fit.mw
@@ -10,7 +10,7 @@ Qui trovi alcune informazioni sulle carte prepagate GSM
 * [http://www.prepaidgsm.net/ PrePaidGSM - Vista mondiale sulle offerte GSM prepagate]
 Pensaci due volte prima di scegliere una tariffa con un contratto di lunga durata (più di 12 mesi), perchè le tariffe per i dati GPRS stanno ''probabilmente'' scendendo in molti paesi. Anche perchè un contratto a lunga durata è spesso combinato con hardware (per esempio: telefono gratis o scontato con un contratto di 24 o 36 mesi). Sarebbe il caso, prima di comprare, di controllare le offerte dei diversi provider attivi nella tua zona.
 
-Abbiamo scelto la rete GSM per il Neo1973 perchè GSM è usata in più paesi che altri tipi di standard di telefonia mobile. Come risultato avrai una copertura migliore con il Neo1973, e sentiamo che questa è la migliore soluzione per il nostro telefono OpenMoko. Quando il Neo1973 sarà completo, e noi crediamo che lo sarà, svilupperemo nuovi telefoni che saranno immessi nel mercato. Questi avranno come OS OpenMoko e supporteranno altri standard di comunicazione mobile. Così se GSM non è disponibile nella tua zona (ad esempio: alcune aree negli USA), OpenMoko porterà altre opzioni al mercato nel futuro.
+Abbiamo scelto la rete GSM per il Neo1973 perchè GSM è usata in più paesi che altri tipi di standard di telefonia mobile. Come risultato avrai una copertura migliore con il Neo1973, e sentiamo che questa è la migliore soluzione per il nostro telefono Openmoko. Quando il Neo1973 sarà completo, e noi crediamo che lo sarà, svilupperemo nuovi telefoni che saranno immessi nel mercato. Questi avranno come OS Openmoko e supporteranno altri standard di comunicazione mobile. Così se GSM non è disponibile nella tua zona (ad esempio: alcune aree negli USA), Openmoko porterà altre opzioni al mercato nel futuro.
 
 Qui sotto c'è una lista di Neo1973-compatibili providers in giro per il mondo. Gentilmente aiutaci completando questa lista  ''in ordine alfabetico'':
 
