Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo_1973_Phase_0.mw
+++ b/Neo_1973_Phase_0.mw
@@ -65,8 +65,8 @@ Watch the screen of the Neo. The following things should happen:
 * it turns on, showing weird things for about 10-30 seconds
 * the screen goes dark for 1-2 minutes
 * the screen lights up and shows a smiling face for a few minutes
-* the screen goes dark and shows a partial (broken) OpenMoko logo for about 5-10 seconds
-* the screen goes dark again, then shows the full OpenMoko logo
+* the screen goes dark and shows a partial (broken) Openmoko logo for about 5-10 seconds
+* the screen goes dark again, then shows the full Openmoko logo
 * the machine will boot Linux now and start touch screen calibration
 
 == Errata ==
@@ -166,7 +166,7 @@ Thus, we'd rather done it the safe way:  Only use 500mA after the USB
 host has granted us permission to do so.
 
 I know that it's almost industry practise to violate this part of the
-spec.  However, OpenMoko wants to set a good example and adhere to
+spec.  However, Openmoko wants to set a good example and adhere to
 standards :)
 
 ==== Solution ====
