Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo_1973_and_Windows.mw
+++ b/Neo_1973_and_Windows.mw
@@ -1,6 +1,6 @@
 This page tries to collect some information on how to use your Neo1973 together with a computer running a Microsoft(R) Windows(TM) series operating system.
 
-Please note that this is not really supported, and that the OpenMoko developers themselves only use Linux for testing.
+Please note that this is not really supported, and that the Openmoko developers themselves only use Linux for testing.
 
 Also note that Windows appears to not recognize and communicate with the neo as a USB device unless you install the .inf file below, and hence you will always have to [[forcing fast charge mode|force fast charge]] to recharge using a usb connection to a Windows machine unless you install that .inf.
 
@@ -17,7 +17,7 @@ How to connect to Windows XP via Bluetooth is described here: [[Manually_using_B
 {{note|For Vista this procedure works with the 2.6.24 kernel that ships with the Neo Freerunner. The initial SSH connection seems a little slow however.}}
 
 # Download http://privat.wmo.de/~c_schweers/NeoRndis.inf ([[NeoRndis.inf|Listing of NeoRndis.inf]]) to somewhere convenient on your Windows machine. If the file is not reachable, you can download another working inf file here: http://users.informatik.uni-halle.de/~rabe/neo/Neo1973.inf ([[Neo1973.inf|Listing of Neo1973.inf]])
-# Power up your Neo1973, let it boot into OpenMoko, and then connect its USB port to the Windows machine, using a standard USB-A to USB-mini-B cable. Note that if you connect the cable ''before'' powering the phone on, Windows will detect a device presented by the [[Boot lader|boot loader]]. This probably isn't what you want. Let the phone power up first.
+# Power up your Neo1973, let it boot into Openmoko, and then connect its USB port to the Windows machine, using a standard USB-A to USB-mini-B cable. Note that if you connect the cable ''before'' powering the phone on, Windows will detect a device presented by the [[Boot lader|boot loader]]. This probably isn't what you want. Let the phone power up first.
 # Assuming the new drivers are downloaded and accessible as above, Windows should detect the Neo1973 and prompt you for a driver for a "RNDIS/Ethernet Gadget". Select to specify your own driver, and then choose the NeoRndis.inf file you downloaded earlier. This file tells Windows XP to use its own built-in RNDIS driver for the device.
 # Windows may complain of "reduced network connectivity". This is because it expects to be able to get an address automatically from the Neo1973 and it doesn't provide one in the default setup. To fix this, see the next step.
 # Go into the Windows network configuration for the new USB networking adapter and set the IP address of the interface to 192.168.0.200.
