--- a/Neo_FreeRunner%2Fnl.mw
+++ b/Neo_FreeRunner%2Fnl.mw
@@ -5,7 +5,7 @@ __NOEDITSECTION__
 <DIV ALIGN=CENTER><big>'''[[Openmoko]]™ Open. Mobile. Free.'''</big><br></DIV>
 <BR>
 
-==<font color=75d806>Introductie van OpenMoko</font>==
+==<font color=75d806>Introductie van Openmoko</font>==
 
 {{Submenu}}
 [[Image:GTA02.gif |100px|left|frontside]]
