Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -133,7 +133,7 @@ Look [http://wiki.openmoko.org/wiki/Today/2007.2#Adjust_UI_components_at_runtime
 == Software ==
 
 === Does it support Java? ===
-There is a [https://wiki.evolvis.org/jalimo/index.php/OpenMoko port of Jalimo] for Openmoko.
+There is a [https://wiki.evolvis.org/jalimo/index.php/Openmoko port of Jalimo] for Openmoko.
 
 === Does it support Flash? So can I watch YouTube? ===
 
