Replacing 'OpenMoko' with 'Openmoko'

--- a/Neo_FreeRunner_GTA02_Hardware_Requirements%2Fru.mw
+++ b/Neo_FreeRunner_GTA02_Hardware_Requirements%2Fru.mw
@@ -20,7 +20,7 @@
 
 *GPRS приемник – GSM/GPRS приемник. Pre-PTCRB сертифицированный модуль будет предпочтительнее
 
-*Linux – Ядро Linux 2.6.24 или более позднее OpenMoko ядро
+*Linux – Ядро Linux 2.6.24 или более позднее Openmoko ядро
 
 *USB - Переключаемый в режимы клиента и хост-контроллера (используется с целью загрузки программ), также обеспечивает питание 5в 
 
