Replacing 'OpenMoko' with 'Openmoko'

--- a/NetBSD.mw
+++ b/NetBSD.mw
@@ -3,7 +3,7 @@
 The NetBSD/evbarm Neo1973 kernel is only ready for kernel developers. Still, it's derived from the longstanding SMDK2410 kernel, given the Neo1973 is [http://wiki.openmoko.org/wiki/QT2410 Armzone QT2410], so SMDK2410, based.
 
 === Required tools ===
-If you don't have a [[Neo1973]], you will need a [[OpenMoko under QEMU|Qemu Neo1973 emulator]], for instance the one running on top of [[Talk:OpenMoko under QEMU#Qemu_Neo1973_emulator_on_NetBSD|NetBSD]].
+If you don't have a [[Neo1973]], you will need a [[Openmoko under QEMU|Qemu Neo1973 emulator]], for instance the one running on top of [[Talk:Openmoko under QEMU#Qemu_Neo1973_emulator_on_NetBSD|NetBSD]].
 
 If you build the kernel yourself, you will need [[Talk:Bootloader|mkimage from u-boot]].
 
@@ -135,7 +135,7 @@ From the qemu directory edit openmoko/flash.sh and add the line:
  </code>
 after the four "most_recent" lines.
 
-(if you do use [[Talk:OpenMoko under QEMU#Qemu_Neo1973_emulator_on_NetBSD|wip/qemu-neo1973]], the line is allready there..and you should only have to uncomment the line.)
+(if you do use [[Talk:Openmoko under QEMU#Qemu_Neo1973_emulator_on_NetBSD|wip/qemu-neo1973]], the line is allready there..and you should only have to uncomment the line.)
 
 
 Next run
