Replacing 'OpenMoko' with 'Openmoko'

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -128,7 +128,7 @@ In the meantime, you may try at your own risk [[Download#Unofficial_builds_by_ze
 = Dedication =
 
 <pre>
-From: OpenMoko
+From: Openmoko
 To: openmoko-community mailing list
 
 Om 2008.8 was designed to be empty, for the very purpose of showcasing your ideas.
