Replacing 'OpenMoko' with 'Openmoko'

--- a/Om_2008.8%2Fes.mw
+++ b/Om_2008.8%2Fes.mw
@@ -73,7 +73,7 @@ Mientras tanto, a lo mejor deseas probarlo por tu cuenta y riesgo [[Download#Uno
 = Dedicatoria=
 
 <pre>
-De: OpenMoko
+De: Openmoko
 Para: Lista de distribución de correo openmoko-community
 
 Om 2008.8 was designed to be empty, for the very purpose of showcasing your ideas.
