--- a/OpenEmbedded.mw
+++ b/OpenEmbedded.mw
@@ -10,12 +10,12 @@ For more information please see the [http://www.openembedded.org/ Open Embedded]
 
 == Building the Openmoko distribution with OpenEmbedded ==
 
-Note that you probably don't want to build Openmoko with OpenEmbedded, if you are an application developer. In that case, you better use our prebuilt [[Toolchain]]. Building Openmoko is a time-, cpu- and diskspace-consuming process which should only be done if you are a system integrator and want to customize your OpenMoko distribution.
+Note that you probably don't want to build Openmoko with OpenEmbedded, if you are an application developer. In that case, you better use our prebuilt [[Toolchain]]. Building Openmoko is a time-, cpu- and diskspace-consuming process which should only be done if you are a system integrator and want to customize your Openmoko distribution.
 
 The facility called [[MokoMakefile]] simplifies building OpenEmbedded, however it also shields you from a lot of knowledge. In case you are the aformentioned system integrator / distribution customizer, we strongly advise you to use BitBake and OpenEmbedded directly.
 
 === OpenEmbedded branch ===
-The official OpenMoko branch of the OpenEmbedded database can be found at [http://git.openmoko.org Git.Openmoko.Org].
+The official Openmoko branch of the OpenEmbedded database can be found at [http://git.openmoko.org Git.Openmoko.Org].
 
 === Upstream Source tarballs ===
 
